--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "grunt-contrib-jshint": "^0.11.2",
     "mocha": "^2.2.5",
     "sinon": "^1.14.1"
+  },
+  "directories": {
+    "test": "test"
   }
 }
