--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
   },
   "homepage": "https://github.com/pricees/cta-node#readme",
   "dependencies": {
+    "cta-api": "0.0.4",
     "lodash": "^3.9.1",
     "q": "^1.4.1",
     "querystring": "^0.2.0",
-    "request-promise": "^0.4.2",
     "xml2js-promise": "0.0.2"
   },
   "devDependencies": {
